<resources>
    <string name="app_name">Quizer 3</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="to_enter">Войти</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="notification">Текст Уведомления</string>
    <string name="screensaver">Подождите\nВыполняется вход</string>
    <string name="error_auth">Не удалось авторизоваться.</string>
    <string name="doubleclick_exit">Нажмите дважды, чтобы выйти</string>
    <string name="app_ver">Версия: %1$s</string>
    <string name="e_mail_sales_quizer_pro">e-mail: sales@quizer.pro</string>
    <string name="_7_909_214_48_33">тел.: +7 909 214 48 33</string>
    <string name="menu_player_map">Menu 1</string>
    <string name="menu_player_raffles">Menu 2</string>
    <string name="menu_player_wins">Menu 3</string>
    <string name="menu_delegate_raffles">Розыгрыши</string>
    <string name="menu_delegate_add">Добавить</string>
    <string name="menu_delegate_winners">Победители</string>
    <string name="load_image">Загрузить изображение</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="no_memory">На устройстве недостаточно памяти</string>
    <string name="side_menu_unknown_name">Имя неизвестно</string>
    <string name="side_menu_id">id: %1$s</string>
    <string name="side_menu_edit">Редактировать</string>
    <string name="side_menu_rating">Рейтинг пользователей</string>
    <string name="side_menu_contacts">Связаться с нами</string>
    <string name="side_menu_benefit">Рассчитать выгоду</string>
    <string name="side_menu_guarant">Гарантированные призы</string>
    <string name="side_menu_tariffs">Тарифы</string>
    <string name="side_menu_faq">Частые вопросы</string>
    <string name="side_menu_info">Информация о компании</string>
    <string name="side_menu_promo">Промоматериалы</string>
    <string name="side_menu_notify_on">Включить уведомления</string>
    <string name="side_menu_notify_off">Отключить уведомления</string>
    <string name="side_menu_delegate">Кабинет представителя</string>
    <string name="side_menu_player">Кабинет игрока</string>
    <string name="side_menu_exit">Выйти</string>
    <string name="side_menu_raffles">Осталось %1$s</string>
    <string name="side_menu_date">Оплачено до</string>
    <string name="side_menu_no_tariff">Тариф не оплачен</string>
    <string name="register_title">Добро пожаловать</string>
    <string name="register_btn_register">Регистрация</string>
    <string name="register_btn_skip">Перейти к розыгрышам</string>
    <string name="page_title">Page Fragment Title</string>
    <string name="page_btn_one">Button 1</string>
    <string name="page_btn_two">Button 2</string>
    <string name="page_btn_three">Button 3</string>
    <string name="button_send">Отправить</string>
    <string name="et_enter_key">Введите ключ</string>
    <string name="empty_key">Ключ активации пуст. Пожалуйста, введите ключ и повторите попытку.</string>
    <string name="wrong_key">Неверный ключ</string>
    <string name="auth_version_warning">Внимание!\nВы работаете на устройстве с версией android %1$s. Стабильная работа приложения не гарантируется.</string>
    <string name="auth_users_on_device">Количество пользователей на данном устройстве: %1$s</string>
    <string name="auth_enter_login">Введите логин</string>
    <string name="auth_enter_password">Введите пароль</string>
    <string name="auth_version_button">Версия: %1$s</string>
    <string name="auth_key_button">Ключ: %1$s</string>
    <string name="notification_empty_login_or_pass">Логин или пароль пуст. Пожалуйста, введите логин и пароль, а затем повторите попытку входа.</string>
    <string name="notification_max_users">Достигнуто максимальное количество пользователей на устройстве (%1$s)! Обратитесь к менеджеру!</string>
    <string name="notification_short_login">Минимальная длина логина - 3 символа. Пожалуйста, введите логин и повторите попытку входа.</string>
    <string name="user_auth">Авторизация пользователя</string>
    <string name="saved_data_login">Удалось войти под сохраненными локальными данными.</string>
    <string name="new_data_login">Удалось войти с введенными данными</string>
    <string name="wrong_login_or_pass">Неверный логин или пароль.</string>
    <string name="send_auth_request">Отправка запроса на авторизицию пользователя</string>
    <string name="get_config">Получение конфига</string>
    <string name="try_to_get_config">Попытка получения конфига</string>
    <string name="get_config_success">Успешное получение конфига</string>
    <string name="loading_files">Загрузка медиа файлов</string>
    <string name="try_to_load_files">Попытка загрузки медиафайлов</string>
    <string name="save_user">Сохранение пользователя</string>
    <string name="save_user_to_db">Сохранение пользователя в базу данных</string>
    <string name="save_user_to_db_error">Ошибка сохранения пользователя в базу данных</string>
    <string name="load_quotas_error">Не удалось загрузить список квот.</string>
    <string name="downloaded_count_files">Скачано %1$s файл(а)</string>
    <string name="download_files_error">Ошибка при загрузке медиа-файлов.</string>
    <string name="downloading_media_files">Загрузка медиа файлов</string>
    <string name="sending_request">Отправка запроса на сервер</string>
    <string name="get_quotas">Получение квот</string>
    <string name="save_quotas">Сохранение квот</string>
    <string name="get_config_done">Конфиг получен</string>
    <string name="config_updated">Конфиг обновлен</string>
    <string name="load_files_complete">Загрузка медиа-файлов завершена</string>
    <string name="save_config">Сохранение конфига</string>
    <string name="save_config_to_db">Сохранение конфига в базу данных</string>
    <string name="save_config_to_db_error">Ошибка сохранения конфига в базу данных</string>
    <string name="save_question_to_db">Сохранение анкеты</string>
    <string name="save_question_to_db_success">Анкета сохранена в базе данных</string>
    <string name="save_questionnaire">Анкета сохранена</string>
    <string name="save_question_to_db_error">Ошибка сохранения анкеты в базе данных</string>
    <string name="show_dialog">Показ диалогового окна</string>
    <string name="no_camera_access">Нет доступа на камеру</string>
    <string name="no_front_camera">Нет передней камеры</string>
    <string name="toast_cant_exit">Подключение к интернету отсутствует, выход из аккаунта невозможен  Для выхода используйте кнопку Назад</string>
    <string name="dialog_remove_user_title">Удаление пользователя</string>
    <string name="dialog_remove_user_body">Вы уверены, что хотите удалить данного пользователя?</string>
    <string name="dialog_error_remove_user_title">Ошибка удаления текущего пользователя</string>
    <string name="dialog_rereg_title">Повторная регистрация</string>
    <string name="dialog_rereg_body">Вы уверены, что хотите пройти повторную регистрацию?</string>
    <string name="dialog_error_remove_user_body">Перед удалением пользователя необходимо отправить все данные. Для для отправки всех данных перейдите в СИНХРОНИЗАЦИЮ.</string>
    <string name="dialog_go_to">Перейти</string>
    <string name="dialog_sending_waves_via_sms">Отправка отчётов с помощью СМС.</string>
    <string name="dialog_sending_waves_via_sms_confirmation">Вы уверены, что хотите отправить волны для пользователя через СМС?</string>
    <string name="dialog_please_turn_on_auto_time">Пожалуйста, включите автоматическое время сети.</string>
    <string name="dialog_you_need_to_turn_on_gps">Для прохождения анкеты необходимо включить GPS, а также режим высокой точности Google (в зависимости от устройства: Google Location Accuracy, Определение местоположения, Геолокация Google или подобное название)</string>
    <string name="dialog_you_need_to_turn_on_google_location">Для прохождения анкеты необходимо включить режим высокой точности Google (в зависимости от устройства: Google Location Accuracy, Определение местоположения, Геолокация Google или подобное название)</string>
    <string name="dialog_you_need_to_turn_off_airplane">Для прохождения анкеты необходимо выключить \"Авиарежим\".</string>
    <string name="dialog_please_give_permissions">Пожалуйста, предоставьте разрешения приложению.</string>
    <string name="dialog_you_need_to_turn_on_permissions">Для работы приложения необходимо перейти в настройки и предоставить нужные разрешия.</string>
    <string name="dialog_you_need_to_turn_on_auto_time">Для прохождения анкеты необходимо включить автоматическое время сети.</string>
    <string name="dialog_perm_on">Перейти</string>
    <string name="dialog_next">Продолжить</string>
    <string name="dialog_perm_off">Отмена</string>
    <string name="dialog_apply">Принять</string>
    <string name="dialog_turn_on">Включить</string>
    <string name="dialog_turn_off">Выключить</string>
    <string name="dialog_please_turn_on_gps">Пожалуйста, включите GPS для продолжения работы.</string>
    <string name="dialog_please_turn_off_airplane">Пожалуйста, выключите \"Авиарежим\"</string>
    <string name="dialog_no_gps">Подключиться к спутнику GPS не удалось.</string>
    <string name="dialog_no_gps_text">Свяжитесь со службой поддержки QUIZER.</string>
    <string name="dialog_no_gps_empty_text"> </string>
    <string name="dialog_no_gps_text_warning">Координаты определить невозможно, пожалуйста, предупредите Вашего организатора</string>
    <string name="dialog_show_error">Невозможно отобразить диалог</string>
    <string name="dialog_fake_gps_title">Обнаружено нарушение.</string>
    <string name="dialog_fake_gps_body">На Вашем устройстве используется программа для подмены GPS-координат. Для продолжения работы необходимо её удалить.</string>
    <string name="dialog_close_app_title">Выход из приложения</string>
    <string name="dialog_delete_title">Завершение анкеты</string>
    <string name="dialog_start_title">Начало новой анкеты</string>
    <string name="dialog_config_title">Обновление конфига</string>
    <string name="dialog_start_body">Вы собираетесь начать новую анкету. При этом сохранённая для продолжения незавершённая анкета будет удалена из очереди на продолжение и её нельзя будет продолжить. Вы действительно хотите начать новую анкету?</string>
    <string name="dialog_config_body">Вы собираетесь обновить конфиг. При этом сохранённая для продолжения незавершённая анкета будет удалена из очереди на продолжение и её нельзя будет продолжить. Вы действительно хотите обновить конфиг?</string>
    <string name="view_unsent_count_quiz">Количество неотправленных анкет: %1$s</string>
    <string name="view_unsent_count_audio">Количество неотправленных аудио файлов: %1$s</string>
    <string name="view_unsent_count_photo">Количество неотправленных фото файлов: %1$s</string>
    <string name="button_delete_files">Удалить аудио и фото</string>
    <string name="button_delete_data_quizer">Очистить диск</string>
    <string name="button_clear_db">Очистить базу данных</string>
    <string name="button_upload_data">Выгрузить данные</string>
    <string name="button_ftp_upload_data">Отправка через FTP</string>
    <string name="button_send_quiz">Отправить анкеты</string>
    <string name="button_logs">Журнал событий</string>
    <string name="button_send_audio">Отправить аудио</string>
    <string name="button_send_photo">Отправить фото</string>
    <string name="view_user_count_on_device">Количество пользователей на данном устройстве: %1$s</string>
    <string name="view_yes">Да</string>
    <string name="view_no">Нет</string>
    <string name="enter_your_name">Введите ваше имя</string>
    <string name="enter_your_birthdate">Введите ваш возраст</string>
    <string name="are_you">Это Вы?</string>
    <string name="timer_switcher_text">Отслеживание скорости работы</string>
    <string name="clear_address_db">Удалить базу адресов</string>
</resources>