<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_name_cont"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_round"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="@dimen/_4sdp"
        android:text="@string/are_you"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/show_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:text="@string/enter_your_name"
        android:textSize="@dimen/_16ssp" />

    <TextView
        android:id="@+id/show_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:focusableInTouchMode="false"
        android:text="@string/enter_your_birthdate"
        android:textSize="@dimen/_16ssp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_wrong_name"
            style="@style/ButtonRed"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_36sdp"
            android:maxLines="1"
            android:text="@string/view_no"
            android:textSize="@dimen/_14ssp" />

        <Button
            android:id="@+id/btn_right_name"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:maxLines="1"
            android:text="@string/view_yes"
            android:textSize="@dimen/_14ssp" />

    </LinearLayout>

</LinearLayout>