<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:id="@+id/service_cont">

    <pro.quizer.quizer3.view.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <pro.quizer.quizer3.view.element.textview.SmallResizableTextView
                android:id="@+id/device_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="Device id" />

            <include layout="@layout/view_divider" />

            <Button
                android:id="@+id/logs_btn"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_logs" />

            <include layout="@layout/view_divider" />

            <pro.quizer.quizer3.view.element.textview.SmallResizableTextView
                android:id="@+id/users_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/view_user_count_on_device" />

            <pro.quizer.quizer3.view.element.textview.SmallResizableTextView
                android:id="@+id/unsended_questionnaires_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/view_unsent_count_quiz" />

            <pro.quizer.quizer3.view.element.textview.SmallResizableTextView
                android:id="@+id/unsended_audio_files_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/view_unsent_count_audio" />

            <pro.quizer.quizer3.view.element.textview.SmallResizableTextView
                android:id="@+id/unsended_photo_files_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/view_unsent_count_photo" />

            <pro.quizer.quizer3.view.element.customswitch.ResizableSwitch
                android:id="@+id/times_logs_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_12sdp"
                android:checked="false"
                android:text="@string/timer_switcher_text"
                android:textStyle="bold"
                android:textSize="16sp" />

            <pro.quizer.quizer3.view.element.customswitch.ResizableSwitch
                android:id="@+id/send_logs_with_quiz_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12sdp"
                android:checked="true"
                android:text="Отправлять логи с анкетой"
                android:textStyle="bold"
                android:textSize="16sp"
                android:visibility="gone"/>

            <pro.quizer.quizer3.view.element.customswitch.ResizableSwitch
                android:id="@+id/uik_question_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:text="Работать БЕЗ учёта проголосовавших не на домашних участках"
                android:textSize="16sp" />

            <Button
                android:id="@+id/send_data"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_send_quiz" />

            <Button
                android:id="@+id/send_audio"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_send_audio" />

            <Button
                android:id="@+id/send_photo"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_send_photo" />

            <Button
                android:id="@+id/upload_data"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_upload_data" />

            <Button
                android:id="@+id/upload_ftp_data"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_ftp_upload_data"
                android:visibility="gone"/>

            <Button
                android:id="@+id/clear_data_quizer"
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_delete_data_quizer" />

            <Button
                android:id="@+id/clear_files"
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_delete_files" />

            <Button
                android:id="@+id/clear_address_db"
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/clear_address_db" />

            <Button
                android:id="@+id/clear_db"
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:textSize="@dimen/_12ssp"
                android:text="@string/button_clear_db" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/view_progress" />

</RelativeLayout>